--- a/paint.html
+++ b/paint.html
@@ -232,6 +232,7 @@ div.tab button.active {
   <button class="tablinks" onclick="openCity(event, 'Funny'); funny()">Funny Game</button>
   <button class="tablinks" onclick="openCity(event, 'Kill'); kill()">Kill Game</button>
   <button class="tablinks" onclick="openCity(event, 'Memory'); memory()">Memory Game</button>
+    <button class="tablinks" onclick="openCity(event, 'Game'); game()"> Game</button>
 </div>
 
 <div id="Snake" class="tabcontent">
@@ -279,6 +280,16 @@ div.tab button.active {
 </script>
 </div>
 
+
+    <div id="Game" class="tabcontent">
+  <h3>Game</h3>
+  <p>Game</p>
+    <script language="javascript">
+        function game()
+        {
+            window.location.href = "game.html"
+        }
+</script>
 <script>
 function openCity(evt, cityName) {
     var i, tabcontent, tablinks;
