--- a/paint.html
+++ b/paint.html
@@ -181,6 +181,7 @@
 
         <canvas id="mycanvas" width="800" height="500" style="border: 1px solid black; cursor: none;" onmousedown="DownFunc()" onmouseup="UpFunc()" onmouseout="document.getElementById('Mcursor').style.display = 'none';" onmouseover="document.getElementById('Mcursor').style.display = 'block';">Not Suported!</canvas>
 
+<!--        kcslc-->
         <head>
 <style>
 body {font-family: "Lato", sans-serif;}
