--- a/about.html
+++ b/about.html
@@ -2,175 +2,278 @@
 <html>
 <head>
 <style>
-body {
+
+    div {
+  height: 190px;
+  line-height: 190px;
   text-align: center;
-  background: url("http://i.imgur.com/UpFLrko.jpg") no-repeat center fixed;
-  background-size: auto;
-  background-position: center;
-  color: white;
-  font-family: georgia;
-}
-.first {
-  margin-left: 200px;
-  margin-right: 0px;
-  margin-top: -5px;
-  padding: 10px;
-  font-size: 22px;
-  background-color:gray;
-  opacity: 0.9;
-  border-color: #cc6600;
-  border-style: solid;
-  border-width: 10px;
-  border-radius: 20px;
-}
-.second{
-  max-width: 500px;
-  padding: 20px;
-  margin: 0 auto;
-  color:white;
-/*  background: rgba(215,117,44,0.8);
-*/  background: rgba(0,0,0,0.7);
-}
-input {
-  border: 0;
-  padding: 10px;
-  font-size: 18px;
-  background: orange;
-  color:
-}
-input[type="submit"] {
-  background: #cc6600;
-  color: white;
-  border-radius: 20px;
-
-}
-input[type="submit"]:hover{
-  background-color: #999900;
+/*  border: 2px dashed #f69c55;*/
 }
 
-input[name="email"] {
-  background: #999900;
-  color: white;
-  font-family: georgia
+    span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 }
-img
-  {
-   border-color: #999900;
-   border-radius: 80px;
-   float: left;
-  }
-ul {
-  padding: 20px;
-  background: rgba(0,0,0,0.7);
+div#memory_board{
+	background:#CCC;
+	border:#999 1px solid;
+	width:800px;
+	height:540px;
+	padding:24px;
+	margin:0px auto;
 }
-li {
-  display: inline;
-  padding: 0px 10px 0px 10px;
-  font-size: 16px;
-  font-weight: bold;
+div#memory_board > div{
+	background: url(tile_bg.jpg) no-repeat;
+	border:#000 1px solid;
+	width:71px;
+	height:71px;
+	float:left;
+	margin:10px;
+	padding:20px;
+	font-size:64px;
+	cursor:pointer;
+	text-align:center;
 }
-a {
-  color: white;
-}
-a:hover {
-    color: #999900;
-}
-article {
-  max-width: 500px;
-  padding: 20px;
-  margin: 0 auto;
-  color:#cc6600;
-}
-#panel{
-    padding: 20px;
-}
-#panel2 {
-    padding: 20px;
-    display: none;
-}
-#panel4 {
-    padding: 20px;
-    display: none;
-}
-#github {
-    padding: 20px;
-    display: none;
-    background-color: rgba(0,0,0,0.7);
-    max-width: 500px;
-    margin: 0 auto;
-}
-@media (max-width: 500px) {
-  h1 {
-    font-size: 36px;
-    padding: 5px;
-  }
 
-  .first{
-    display: none;
-  }
+ .centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+/*    design for main menu*/
+     #sse2
+{
+    /*You can decorate the menu's container, such as adding background images through this block*/
+    background-color: #003366;
+    height: 38px;
+    padding: 15px;
+    border-radius: 6px;
+    box-sizing: content-box;
+}
+#sses2
+{
+    margin:0 auto;/*This will make the menu center-aligned. Removing this line will make the menu align left.*/
+}
+#sses2 ul
+{
+    position: relative;
+    list-style-type: none;
+    float:left;
+    padding:0;margin:0;
+}
+#sses2 li
+{
+    float:left;
+    list-style-type: none;
+    padding:0;margin:0;background-image:none;
+}
+/*CSS for background bubble*/
+#sses2 li.highlight
+{
+    border:solid 1px #004E9B;
+    background-color:#003D79;
+    top:0px;
+    height:30px;
+    border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    z-index: 1;
+    position: absolute;
+    overflow:hidden;
+}
+#sses2 li a
+{
+    height:30px;
+    padding-top: 8px;
+    margin: 0 20px;/*used to adjust the distance between each menu item. Now the distance is 20+20=40px.*/
+    color: #fff;
+    font: normal 12px arial;
+    text-align: center;
+    text-decoration: none;
+    float: left;
+    display: block;
+    position: relative;
+    z-index: 2;
+}
 
-  img {
-    float: none;
-  }
+
     </style>
 
-<head>
-   <link href="style.css" type="text/css" rel="stylesheet"/>
-   <script src="myscripts.js" type="text/javascript"></script>
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!--   <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>-->
-   <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-   <script>
-      $(document).ready(function(){
-      // $("#flip").click(function(){
-      //   $("#panel").slideToggle("slow");});
-      $("#flip2").click(function(){
-        $("#panel2").slideToggle("slow");});
-      $("#flip3").click(function(){
-        $("#github").slideToggle("slow");});
-      $("#flip4").click(function(){
-        $("#panel4").slideToggle("slow");});
-      });
-   </script>
-   <title>Sana Javed</title>
-</head>
+
 <body>
-   <header>
+    <div id="sse2">
+  <div id="sses2">
+    <ul>
+      <li onclick="gameBTN()"><a href="#"> Game </a></li>
+    <li onclick=" newgame()"><a href="#"> Create new board </a></li>
+      <li><a href="?menu=2&skin=3&p=Web-Menus"> Store and States </a></li>
+      <li><a href="?menu=2&skin=3&p=Web-Menus"> About </a></li>
 
-   </header>
-   <ul>
-<!--       <li id="flip"><a href="#">About</a></li> -->
-      <li id="flip3"><a href="#">Github Link</a></li>
-      <li id="flip2"><a href="#">LinkedIn</a></li>
-      <li id="flip4"><a href="#">Email Me</a></li>
-   </ul>
-   <div id="all content">
-      <div id="panel4">
-         <form name="email_signup" method="post">
-            <input name="email" placeholder="Email me and say hi!">
-            <input type="submit">
-         </form>
-      </div>
-      <div id="panel">
-         <article>
-            <p class="second"><b><a>About Memory Game</a></b><br><br>Hello there! Hope you will enjoy the game!!! <br><br>
-            The game is a memory game where you need to match pairs of tiles. Playing is very simple - you turn over one tile and then try to find a matching tile.
 
-                When you click on the first tile of a turn and you have exposed a matching tile in a previous turn, a message tells you that the pair is known. This indicates that you should then be able to make a match (if you have perfect recall). The scoring system incorporates this principle. In some levels, all the tiles are revealed initially for a few seconds. This makes it harder to score a perfect recall as it assumes you remember where each tile is.
-            <br><br> :) :) :)  <br><br>
-            </p>
-         </article>
-      </div>
-      <div id="github">
-<!--         <a class="embedly-card" data-card-theme="dark" href="http://github.com/sanajaved7">sanajaved7 (Sana Javed)</a>-->
-      </div>
-      <div id="panel2">
-         <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/sanajaved" data-format="inline"></script>
-      </div>
-   </div>
-   </script>
-   </div>
-</body>
+
+  <script>
+
+     function gameBTN()
+    {
+        window.location.href = "memory.html"
+//        alert("Game btn is pressed")
+    }
+
+
+             var sse2 = function () {
+    var rebound = 20; //set it to 0 if rebound effect is not prefered
+    var slip, k;
+    return {
+        buildMenu: function () {
+            var m = document.getElementById('sses2');
+            if (!m) return;
+            var ul = m.getElementsByTagName("ul")[0];
+            m.style.width = ul.offsetWidth + 1 + "px";
+            var items = m.getElementsByTagName("li");
+            var a = m.getElementsByTagName("a");
+
+            slip = document.createElement("li");
+            slip.className = "highlight";
+            ul.appendChild(slip);
+
+            var url = document.location.href.toLowerCase();
+            k = -1;
+            var nLength = -1;
+            for (var i = 0; i < a.length; i++) {
+                if (url.indexOf(a[i].href.toLowerCase()) != -1 && a[i].href.length > nLength) {
+                    k = i;
+                    nLength = a[i].href.length;
+                }
+            }
+
+            if (k == -1 && /:\/\/(?:www\.)?[^.\/]+?\.[^.\/]+\/?$/.test) {
+                for (var i = 0; i < a.length; i++) {
+                    if (a[i].getAttribute("maptopuredomain") == "true") {
+                        k = i;
+                        break;
+                    }
+                }
+                if (k == -1 && a[0].getAttribute("maptopuredomain") != "false")
+                    k = 0;
+            }
+            if (k > -1) {
+                slip.style.width = items[k].offsetWidth + "px";
+                //slip.style.left = items[k].offsetLeft + "px";
+                sse2.move(items[k]); //comment out this line and uncomment the line above to disable initial animation
+            }
+            else {
+                slip.style.visibility = "hidden";
+            }
+
+            for (var i = 0; i < items.length - 1; i++) {
+                items[i].onmouseover = function () {
+                    if (k == -1) slip.style.visibility = "visible";
+                    if (this.offsetLeft != slip.offsetLeft) {
+                        sse2.move(this);
+                    }
+                }
+            }
+
+            m.onmouseover = function () {
+                if (slip.t2)
+                    slip.t2 = clearTimeout(slip.t2);
+            };
+
+            m.onmouseout = function () {
+                if (k > -1 && items[k].offsetLeft != slip.offsetLeft) {
+                    slip.t2 = setTimeout(function () { sse2.move(items[k]); }, 50);
+                }
+                if (k == -1) slip.t2 = setTimeout(function () { slip.style.visibility = "hidden"; }, 50);
+            };
+        },
+        move: function (target) {
+            clearInterval(slip.timer);
+            var direction = (slip.offsetLeft < target.offsetLeft) ? 1 : -1;
+            slip.timer = setInterval(function () { sse2.mv(target, direction); }, 15);
+        },
+        mv: function (target, direction) {
+            if (direction == 1) {
+                if (slip.offsetLeft - rebound < target.offsetLeft)
+                    this.changePosition(target, 1);
+                else {
+                    clearInterval(slip.timer);
+                    slip.timer = setInterval(function () {
+                        sse2.recoil(target, 1);
+                    }, 15);
+                }
+            }
+            else {
+                if (slip.offsetLeft + rebound > target.offsetLeft)
+                    this.changePosition(target, -1);
+                else {
+                    clearInterval(slip.timer);
+                    slip.timer = setInterval(function () {
+                        sse2.recoil(target, -1);
+                    }, 15);
+                }
+            }
+            this.changeWidth(target);
+        },
+        recoil: function (target, direction) {
+            if (direction == -1) {
+                if (slip.offsetLeft > target.offsetLeft) {
+                    slip.style.left = target.offsetLeft + "px";
+                    clearInterval(slip.timer);
+                }
+                else slip.style.left = slip.offsetLeft + 2 + "px";
+            }
+            else {
+                if (slip.offsetLeft < target.offsetLeft) {
+                    slip.style.left = target.offsetLeft + "px";
+                    clearInterval(slip.timer);
+                }
+                else slip.style.left = slip.offsetLeft - 2 + "px";
+            }
+        },
+        changePosition: function (target, direction) {
+            if (direction == 1) {
+                //following +1 will fix the IE8 bug of x+1=x, we force it to x+2
+                slip.style.left = slip.offsetLeft + Math.ceil(Math.abs(target.offsetLeft - slip.offsetLeft + rebound) / 10) + 1 + "px";
+            }
+            else {
+                //following -1 will fix the Opera bug of x-1=x, we force it to x-2
+                slip.style.left = slip.offsetLeft - Math.ceil(Math.abs(slip.offsetLeft - target.offsetLeft + rebound) / 10) - 1 + "px";
+            }
+        },
+        changeWidth: function (target) {
+            if (slip.offsetWidth != target.offsetWidth) {
+                var diff = slip.offsetWidth - target.offsetWidth;
+                if (Math.abs(diff) < 4) slip.style.width = target.offsetWidth + "px";
+                else slip.style.width = slip.offsetWidth - Math.round(diff / 3) + "px";
+            }
+        }
+    };
+} ();
+
+if (window.addEventListener) {
+    window.addEventListener("load", sse2.buildMenu, false);
+}
+else if (window.attachEvent) {
+    window.attachEvent("onload", sse2.buildMenu);
+}
+else {
+    window["onload"] = sse2.buildMenu;
+}
+
+        </script>
+
+    <div>
+
+        <span>
+            <p>The game is a memory game where you need to match pairs of tiles. Playing is very simple - you turn over one tile and then try to find a matching tile.</p>
+            <p> When you click on the first tile of a turn and you have exposed a matching tile in a previous turn, a message tells you that the pair is known. This indicates that you should then be able to make a match (if you have perfect recall).</
+                p>
+            The scoring system incorporates this principle. In some levels, all the tiles are revealed initially for a few seconds. This makes it harder to score a perfect recall as it assumes you remember where each tile is.</span>
+</div>
+
 
 </body>
 </html>
