--- a/memory.html
+++ b/memory.html
@@ -114,6 +114,7 @@ div#memory_board > div{
     function about()
     {
         window.location.href = "about.html"
+//         alert("Game btn is pressed")
     }
 
     function newgame()
@@ -384,7 +385,7 @@ function memoryFlipTile(tile,val){
 
 </body>
     <body onLoad="stopTimer()">
-        The game lasted <span id="ELAPSED"></span>
+<!--        The game lasted <span id="ELAPSED"></span>-->
     </body>
 <script>newBoard();</script>
 </body>
