--- a/newgame.html
+++ b/newgame.html
@@ -57,6 +57,10 @@
     position: relative;
     z-index: 2;
 }
+
+
+
+
 </style>
 
 
@@ -75,7 +79,7 @@
       <li><a href="?menu=2&skin=3&p=Web-Menus"> About </a></li>
 
 
-         <li onclick=" memory()"><a href="#"> Game </a></li>
+<!--         <li onclick=" memory()"><a href="#"> Game </a></li>-->
   <script>
 
      function gameBTN()
@@ -233,10 +237,10 @@ else {
 //    document.getElementById("myForm").submit();
 //}
 //
-    window.onload = function() {
-   var getInput = prompt("Hey type something here: ");
-   localStorage.setItem("storageName",getInput);
-}
+//    window.onload = function() {
+//   var getInput = prompt("Hey type something here: ");
+//   localStorage.setItem("storageName",getInput);
+//}
 </script>
 
 </head>
