--- a/snake.html
+++ b/snake.html
@@ -1,3 +1,23 @@
-htn ynhytn tyhty hbthb
-Privetttt!!!!
-vsvdfb fvfdsb
+<html>
+ <head>
+  <meta charset='utf-8'/>
+  	<link rel="stylesheet" href="css/style.css">
+
+ </head>
+ <body>
+  <div class= 'game'>
+  <div id = 'home'>
+    <canvas id='mycanvas' width='350' height='350'>
+    </canvas>
+    </div>
+    <p>Snake este un joc destul de cunoscut , si simplu! Foloseste sagetile pentru am putea misca si manevra sarpele astfel incit
+sa manince pizza! Ai grija sa la spatiul in care se limiteaza sarpele!!</p>
+    <button id='btn'>START</button>
+  </div>
+
+  <script src="js/setting.js"></script>
+  <script src="js/draw.js"></script>
+  <script src="js/app.js"></script>
+ </body>
+
+</html>
