--- a/newgame.html
+++ b/newgame.html
@@ -62,7 +62,8 @@
 
 
 </style>
-
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="jquery.cookie.js"></script>
 
 
 
@@ -233,15 +234,33 @@ else {
 
 
 <script>
-//function myFunction() {
-//    document.getElementById("myForm").submit();
-//}
-//
-//    window.onload = function() {
-//   var getInput = prompt("Hey type something here: ");
-//   localStorage.setItem("storageName",getInput);
-//}
+
+    var day;
+switch (new Date().getDay()) {
+    case 0:
+        day = "Sunday";
+        break;
+    case 1:
+        day = "Monday";
+        break;
+    case 2:
+        day = "Tuesday";
+        break;
+    case 3:
+        day = "Wednesday";
+        break;
+    case 4:
+        day = "Thursday";
+        break;
+    case 5:
+        day = "Friday";
+        break;
+    case  6:
+        day = "Saturday";
+}
+document.getElementById("demo").innerHTML = "Today is " + day;
 </script>
+<!--        var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F','G','G','H','H','I','I','J','J','K','K','L','L'];-->
 
 </head>
       </html>
