--- a/memory.html
+++ b/memory.html
@@ -82,6 +82,8 @@ div#memory_board > div{
 </style>
 
 
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="jquery.cookie.js"></script>
 
 
 
@@ -279,8 +281,9 @@ else {
 <script>
 
 //  The prototype(idea) is a project from youtube: https://www.youtube.com/watch?v=kne0HVNg5cQ
-var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F','G','G','H','H','I','I','J','J','K','K','L','L'];
-//var memory_array = ["Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa","Masa",]
+//var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F','G','G','H','H','I','I','J','J','K','K','L','L'];
+//var memory_array = ['1','1','2','2','3','3','4','4','5','5','6','6','7','7','8','8','9','9','10','10','11','11','12','12'];
+    var memory_array = ['-','-','+','+','/','/','*','*','&','&','%','%','@','@','#','#','$','$','( ','( ',')', ')','0', '0'];
 var memory_values = [];
 var memory_tile_ids = [];
 var tiles_flipped = 0;
