--- a/memory.html
+++ b/memory.html
@@ -100,19 +100,13 @@ div#memory_board > div{
 
         <li onclick=" about()"><a href="#"> About </a></li>
 
-<!--      <li><a href="?menu=2&skin=3&p=Web-Menus"> About </a></li>-->
+
 
 
 
 <script>
 
-//    window.onload = alert(localStorage.getItem("storageName"));
 
-//    function memory()
-//    {
-//        window.location.href = "memory.html"
-//    }
-//
     function about()
     {
         window.location.href = "about.html"
@@ -280,10 +274,16 @@ else {
 
 <script>
 
+
+//    setting cookies for my array of memory-------------------------------------------------------------------------------
 //  The prototype(idea) is a project from youtube: https://www.youtube.com/watch?v=kne0HVNg5cQ
 //var memory_array = ['A','A','B','B','C','C','D','D','E','E','F','F','G','G','H','H','I','I','J','J','K','K','L','L'];
 //var memory_array = ['1','1','2','2','3','3','4','4','5','5','6','6','7','7','8','8','9','9','10','10','11','11','12','12'];
     var memory_array = ['-','-','+','+','/','/','*','*','&','&','%','%','@','@','#','#','$','$','( ','( ',')', ')','0', '0'];
+if ($.cookie("memory_array"))
+    {
+        var memory_array = JSON.parse($.cookie("memory_array"));
+    }
 var memory_values = [];
 var memory_tile_ids = [];
 var tiles_flipped = 0;
