--- a/newgame.html
+++ b/newgame.html
@@ -3,6 +3,12 @@
 <head>
 <style>
 
+
+.button {
+
+    position: absolute;
+    top: 50%;
+}
     #sse2
 {
     /*You can decorate the menu's container, such as adding background images through this block*/
@@ -266,9 +272,64 @@ else {
 
 
         </script>
-<!--function to trafer cookies to another page--------------------------------------------------------------------------->
+<!--function to transfer cookies to another page--------------------------------------------------------------------------->
 
 
+        <style>
+
+
+/*
+button {
+    background: red;
+    position: relative;
+    display: block;
+    margin:0 auto;
+    position: absolute;
+    top: 50%;
+}
+*/
+  .tablinks1
+   {
+       position top: 100px
+	background-color:darkblue;
+
+}
+.tablinks1:hover {
+	background-color:deepskyblue;
+}
+.tablinks1:active {
+	position:relative;
+	top:1px;
+}
+ .tablinks2
+   {
+       position top: 100px
+	background-color:darkblue;
+
+}
+.tablinks2:hover {
+	background-color:deepskyblue;
+}
+.tablinks2:active {
+	position:relative;
+	top:1px;
+}
+
+             .tablinks3
+   {
+       position top: 200px
+	background-color:darkblue;
+
+}
+.tablinks3:hover {
+	background-color:deepskyblue;
+}
+.tablinks3:active {
+	position:relative;
+	top:1px;
+}
+
+        </style>
 <body>
    <div class="tab">
         <button class="tablinks1">First new board </button>
