--- a/about.html
+++ b/about.html
@@ -112,7 +112,10 @@ div#memory_board > div{
       <li><a href="?menu=2&skin=3&p=Web-Menus"> Store and States </a></li>
       <li><a href="?menu=2&skin=3&p=Web-Menus"> About </a></li>
 
-
+    <span>
+            <p>The game is a memory game where you need to match pairs of tiles. Playing is very simple - you turn over one tile and then try to find a matching tile.</p>
+            <p> When you click on the first tile of a turn and you have exposed a matching tile in a previous turn, a message tells you that the pair is known. This indicates that you should then be able to make a match (if you have perfect recall).</p>
+            The scoring system incorporates this principle. In some levels, all the tiles are revealed initially for a few seconds. This makes it harder to score a perfect recall as it assumes you remember where each tile is.</span>
 
   <script>
 
@@ -264,15 +267,6 @@ else {
 }
 
         </script>
-
-    <div>
-
-        <span>
-            <p>The game is a memory game where you need to match pairs of tiles. Playing is very simple - you turn over one tile and then try to find a matching tile.</p>
-            <p> When you click on the first tile of a turn and you have exposed a matching tile in a previous turn, a message tells you that the pair is known. This indicates that you should then be able to make a match (if you have perfect recall).</
-                p>
-            The scoring system incorporates this principle. In some levels, all the tiles are revealed initially for a few seconds. This makes it harder to score a perfect recall as it assumes you remember where each tile is.</span>
-</div>
 
 
 </body>
