--- a/newgame.html
+++ b/newgame.html
@@ -273,25 +273,26 @@ else {
 
         </script>
 <!--function to transfer cookies to another page--------------------------------------------------------------------------->
-
+<!--design for it---------------------------------------------------------------------------------------------------->
 
         <style>
-
-
-/*
-button {
-    background: red;
-    position: relative;
-    display: block;
-    margin:0 auto;
-    position: absolute;
-    top: 50%;
-}
-*/
   .tablinks1
    {
-       position top: 100px
+
 	background-color:darkblue;
+
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
 
 }
 .tablinks1:hover {
@@ -303,8 +304,21 @@ button {
 }
  .tablinks2
    {
-       position top: 100px
+
 	background-color:darkblue;
+       -moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+
 
 }
 .tablinks2:hover {
@@ -315,10 +329,23 @@ button {
 	top:1px;
 }
 
-             .tablinks3
+ .tablinks3
    {
-       position top: 200px
+
 	background-color:darkblue;
+       -moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+
 
 }
 .tablinks3:hover {
@@ -336,9 +363,6 @@ button {
        <button class="tablinks2">Second new board</button>
        <button class="tablinks3">Third new board</button>
 </div>
-
-
-
 
 
 </script>
