--- a/newgame.html
+++ b/newgame.html
@@ -356,6 +356,14 @@ else {
 	top:1px;
 }
 
+            .tab{
+                position: absolute;
+                top: 60px;
+                left: 70%;
+                transform: translate(-50%, 0);
+                width: 800px;
+            }
+
         </style>
 <body>
    <div class="tab">
@@ -365,8 +373,6 @@ else {
 </div>
 
 
-</script>
-    </div>
 
     <script>
 function openCity(evt, cityName) {
@@ -385,9 +391,4 @@ function openCity(evt, cityName) {
 </script>
 
 </body>
-    </body>
-
-</script>
-
-</head>
-      </html>
+</html>
