--- a/paint.html
+++ b/paint.html
@@ -232,7 +232,7 @@ div.tab button.active {
   <button class="tablinks" onclick="openCity(event, 'Funny'); funny()">Funny Game</button>
   <button class="tablinks" onclick="openCity(event, 'Kill'); kill()">Kill Game</button>
   <button class="tablinks" onclick="openCity(event, 'Memory'); memory()">Memory Game</button>
-    <button class="tablinks" onclick="openCity(event, 'Game'); game()"> Game</button>
+    <button class="tablinks" onclick="openCity(event, 'Flopps'); flopps()"> Flopps</button>
 </div>
 
 <div id="Snake" class="tabcontent">
@@ -281,13 +281,13 @@ div.tab button.active {
 </div>
 
 
-    <div id="Game" class="tabcontent">
-  <h3>Game</h3>
-  <p>Game</p>
+    <div id="Flopps" class="tabcontent">
+  <h3>Flopps</h3>
+  <p>Flopps</p>
     <script language="javascript">
-        function game()
+        function flopps()
         {
-            window.location.href = "game.html"
+            window.location.href = "index.html"
         }
 </script>
 <script>
