--- a/paint2.html
+++ b/paint2.html
@@ -1,6 +1,5 @@
-<DOCTYPE html >
-<html>
-    <head>
+<html><head>
+    <body>
         <title>Paint</title>
 
         <style>
@@ -84,14 +83,12 @@
                 margin-top: 2px;
                 width: 48px;
             }
-
             .copy{
                 position: absolute;
                 width: 100%;
                 bottom: 0;
                 text-align: center;
             }
-
             #rectangle{
                 background-image: url('rectangle.png');
                 background-position: center center;
@@ -113,7 +110,6 @@
                 width: 23px;
                 height: 23px;
             }
-
             #textInput{
                 position: fixed;
                 z-index: 25;
@@ -123,8 +119,6 @@
                 background-color: rgba(255,255,255,.5);
                 display: none;
             }
-
-
             #textInput input{
                 padding: 5px;
                 border: 1px solid black;
@@ -145,11 +139,9 @@
                 margin: 2px 0 0 0;
                 width: 95px;
             }
-
             #txtbtn{
               cursor: pointer;
             }
-
             #dragablepaletes{
                 cursor: crosshair;
                 display: block;
@@ -160,7 +152,6 @@
                 top: 0;
                 line-height: 30px;
             }
-
             #previzualizare{
                 position: absolute;
                 border: 1px dashed black;
@@ -171,10 +162,7 @@
                 transform: translate(0,-95%);
                 white-space: nowrap;
                 display: none;
-
-
             }
-
         </style>
 
     </head>
@@ -182,18 +170,15 @@
 
         <canvas id="mycanvas" width="800" height="500" style="border: 1px solid black; cursor: none;" onmousedown="DownFunc()" onmouseup="UpFunc()" onmouseout="document.getElementById('Mcursor').style.display = 'none';" onmouseover="document.getElementById('Mcursor').style.display = 'block';">Not Suported!</canvas>
 
-<!--        kcslc-->
-<!--        <head>-->
+        <head>
 <style>
-/*body {font-family: "Lato", sans-serif;}*/
-
+body {font-family: "Lato", sans-serif;}
 /* Style the tab */
 div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
-
 /* Style the buttons inside the tab */
 div.tab button {
     background-color: inherit;
@@ -205,17 +190,14 @@ div.tab button {
     transition: 0.3s;
     font-size: 17px;
 }
-
 /* Change background color of buttons on hover */
 div.tab button:hover {
     background-color: #ddd;
 }
-
 /* Create an active/current tablink class */
 div.tab button.active {
     background-color: #ccc;
 }
-
 /* Style the tab content */
 .tabcontent {
     display: none;
@@ -224,19 +206,17 @@ div.tab button.active {
     border-top: none;
 }
 </style>
-<!--</head>-->
-<!--<body>-->
+</head>
+<body>
 
 <p>Would you like to play another game ???</p>
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Snake'); snake()">Snake Game</button>
-<!--
   <button class="tablinks" onclick="openCity(event, 'Funny'); funny()">Funny Game</button>
   <button class="tablinks" onclick="openCity(event, 'Kill'); kill()">Kill Game</button>
--->
   <button class="tablinks" onclick="openCity(event, 'Memory'); memory()">Memory Game</button>
-    <button class="tablinks" onclick="openCity(event, 'Flopps'); flopps()"> Flopps</button>
+    <button class="tablinks" onclick="openCity(event, 'Game'); game()"> Game</button>
 </div>
 
 <div id="Snake" class="tabcontent">
@@ -251,7 +231,6 @@ div.tab button.active {
 
 </div>
 
-<!--
 <div id="Funny" class="tabcontent">
   <h3>Funny Game</h3>
   <p>New game based on the modern principles of basic algorithms.</p>
@@ -273,7 +252,6 @@ div.tab button.active {
         }
 </script>
 </div>
--->
 
 <div id="Memory" class="tabcontent">
   <h4>Memory Game</h4>
@@ -287,17 +265,15 @@ div.tab button.active {
 </div>
 
 
-    <div id="Flopps" class="tabcontent">
-  <h3>Flopps</h3>
-  <p>Flopps</p>
+    <div id="Game" class="tabcontent">
+  <h3>Game</h3>
+  <p>Game</p>
     <script language="javascript">
-        function flopps()
+        function game()
         {
-            window.location.href = "index.html"
+            window.location.href = "game.html"
         }
 </script>
-        </div>
-
 <script>
 function openCity(evt, cityName) {
     var i, tabcontent, tablinks;
@@ -314,51 +290,34 @@ function openCity(evt, cityName) {
 }
 </script>
 
-<!--</body>-->
+</body>
         <script>
-
             var color,colorEraser;
-
             var b = true,c=true;
-
             var dim = 5;
             var erdim,posprevx,posprevy,pX1,pY1;
             var dragbool=0,paletes=0,textinputbox=0;
             var brush = 0;
-
             window.addEventListener("keypress", keydetect, true);
-
             function keydetect(e){
-
                 e = e || window.event;
-
                 if (e.keyCode == '43') {
                     diminc();
                 }
                 else if (e.keyCode == '45') {
                     dimdec();
                 }
-
                 putCursor(posprevx,posprevy);
                 document.getElementById("pos").innerHTML = "x:"+posprevx+" y:"+posprevy+"|brush:"+dim;
-
             }
-
-
             function diminc(){
                 dim++;
             }
-
             function dimdec(){
                 dim--;
                 if(dim<=1)dim=1;
             }
-
-
-
             function eraserFunc(){
-
-
               if(Boolean(b)){
                     erdim = dim;
                     dim = 25;
@@ -370,54 +329,28 @@ function openCity(evt, cityName) {
                   b = !Boolean(b);
                   document.getElementById("eraser").style.outline = "none";
               }
-
-
             }
-
-
-
-
             document.addEventListener("mousemove",getxy);
             document.addEventListener("mousedown",getrectxy);
-
-
-
-
             function DownFunc(){
-
-
                 if(Boolean(b)){
                     color = document.getElementById("color").value;
                 }else{
                     color=colorEraser;
                 }
-
-
                 document.addEventListener("mousemove",drawFunc);
                 document.addEventListener("mousedown",drawFunc);
-
             }
-
-
-
              function UpFunc(){
                 document.removeEventListener("mousemove",drawFunc);
                 document.removeEventListener("mousedown",drawFunc);
-
             }
-
-
             function getrectxy(e){
                  var posX = e.clientX;
                  var posY = e.clientY;
-
-
                 pX1 = posX;
                 pY1 = posY;
-
             }
-
-
             function brushRFunc(){
                 brush =0;
                 document.getElementById("Mcursor").style.border = "1px solid grey";
@@ -427,9 +360,7 @@ function openCity(evt, cityName) {
                 document.getElementById("brushTriangle").style.outline = "none";
                 document.getElementById("rectangle").style.outline = "none";
                 document.getElementById("circle").style.outline = "none";
-
             }
-
             function brushCFunc(){
                 brush =1;
                 document.getElementById("Mcursor").style.border = "1px solid grey";
@@ -439,8 +370,6 @@ function openCity(evt, cityName) {
                 document.getElementById("brushCircle").style.outline = "3px dashed black";
                 document.getElementById("rectangle").style.outline = "none";
                 document.getElementById("circle").style.outline = "none";
-
-
             }
             function brushTFunc(){
                 brush =2;
@@ -452,10 +381,7 @@ function openCity(evt, cityName) {
                 document.getElementById("brushTriangle").style.outline = "3px dashed black";
                 document.getElementById("rectangle").style.outline = "none";
                 document.getElementById("circle").style.outline = "none";
-
-
             }
-
              function rectSFunc(){
                 brush =3;
                 dim = 5;
@@ -466,7 +392,6 @@ function openCity(evt, cityName) {
                 document.getElementById("brushCircle").style.outline = "none";
                 document.getElementById("brushTriangle").style.outline = "none";
                 document.getElementById("circle").style.outline = "none";
-
             }
             function circleSFunc(){
                 brush =4;
@@ -479,23 +404,15 @@ function openCity(evt, cityName) {
                 document.getElementById("brushCircle").style.outline = "none";
                 document.getElementById("brushTriangle").style.outline = "none";
             }
-
             function trashFunc(){
                 var canvas = document.getElementById("mycanvas");
                 var ctx = canvas.getContext("2d");
-
                 ctx.clearRect(0,0,canvas.width,canvas.height);
             }
-
-
-
-
             function getxy(e){
                     var posX = e.clientX;
                     var posY = e.clientY;
                     putCursor(posX,posY);
-
-
                     posprevx = posX;
                     posprevy = posY;
                     var pal = document.getElementById('inspector').style;
@@ -506,37 +423,27 @@ function openCity(evt, cityName) {
                             pal.left = posX + 'px';
                             pal.top = posY + 'px';
                         }
-
                         if(textinputbox == 1){
                             txtw.transform = 'translate(-50%,-5px)';
                             txtw.left = posX + 'px';
                             txtw.top = posY + 'px';
                         }
                     }
-
                     document.getElementById("pos").innerHTML = "x:"+posX+" y:"+posY+"|brush:"+dim;
-
-
                 //strokefill
-
-
               if(Boolean(c)){
                     colp = document.getElementById('color').value;
                     document.getElementById("strokeFill").style.background = colp;
                     document.getElementById("strokeFill").style.border = '3px solid '+colp;
-
               }else{
                   colp = document.getElementById('color').value;
                   document.getElementById("strokeFill").style.background = "none";
                   document.getElementById("strokeFill").style.border = '3px solid '+colp;
               }
-
             }
-
             function drawFunc(e){
                     var posX = e.clientX;
                     var posY = e.clientY;
-
                     if(brush==0){
                         drawRect(posX,posY);
                         document.getElementById("brushRect").style.outline = "3px dashed black";
@@ -573,10 +480,7 @@ function openCity(evt, cityName) {
                         document.getElementById("brushTriangle").style.outline = "none";
                         document.getElementById("circle").style.outline = "3px dashed black";
                     }
-
             }
-
-
             function putCursor(x,y){
                 var div = document.getElementById("Mcursor");
                 document.getElementById("mycanvas").style.cursor = "none";
@@ -585,23 +489,19 @@ function openCity(evt, cityName) {
                 div.style.height = dim+"px";
                 div.style.left = x+2+"px";
                 div.style.top = y+2+"px";
-
             }
-
             function drawRect(x,y){
             var canvas = document.getElementById("mycanvas");
             var ctx = canvas.getContext("2d");
                 ctx.fillStyle = color;
                 ctx.fillRect(x+2,y+2,dim,dim);
             }
-
             function drawRectangleFunc(x1,y1,x2,y2){
                 var canvas = document.getElementById("mycanvas");
                 var ctx = canvas.getContext("2d");
                 ctx.fillStyle = color;
                 ctx.fillRect(x1+2,y1+2,x2-x1,y2-y1);
             }
-
             function drawCircleFunc(x1,y1,x2,y2){
                 var canvas = document.getElementById("mycanvas");
                 var ctx = canvas.getContext("2d");
@@ -611,7 +511,6 @@ function openCity(evt, cityName) {
                 ctx.fill();
                 ctx.closePath();
             }
-
             function drawCircle(x,y){
             var canvas = document.getElementById("mycanvas");
             var ctx = canvas.getContext("2d");
@@ -620,9 +519,7 @@ function openCity(evt, cityName) {
                 ctx.arc(x+dim/2+2, y+dim/2+2, dim/2 , 0, 2 * Math.PI, true);
                 ctx.fill();
                 ctx.closePath();
-
             }
-
             function drawTriangle(x,y){
             var canvas = document.getElementById("mycanvas");
             var ctx = canvas.getContext("2d");
@@ -635,7 +532,6 @@ function openCity(evt, cityName) {
                 ctx.lineTo(x+dim,y+dim);
                 ctx.fill();
                 ctx.closePath();
-
             }
             function setText(ltxt,lsize,lfont,x,y){
                 var canvas = document.getElementById("mycanvas");
@@ -651,20 +547,15 @@ function openCity(evt, cityName) {
                 }
                 document.getElementById('textInput').style.display = "none";
             }
-
             function startdrag(){
                 dragbool = 1;
             }
             function stopdrag(){
                 dragbool = 0;
             }
-
             function showTextPannel(){
             document.getElementById('textInput').style.display = "block";
-
-
             }
-
              function strokefillFunc(){
                  var tempcol = document.getElementById('color').value;
                  //text draw
@@ -675,7 +566,6 @@ function openCity(evt, cityName) {
                     document.getElementById("strokeFill").style.border = '3px solid '+document.getElementById('color').value;
                     c = !Boolean(c);
               }else{
-
                   c = !Boolean(c);
                   document.getElementById('previzualizare').style.textShadow = 'none';
                   document.getElementById('previzualizare').style.color = tempcol;
@@ -683,31 +573,18 @@ function openCity(evt, cityName) {
                   document.getElementById("strokeFill").style.border = '3px solid '+document.getElementById('color').value;
               }
             }
-
-
-
             function keyUpFunc(){
                 var pretxt =  document.getElementById('textcanvas').value;
-
                 if(pretxt != 0){
                     document.getElementById('previzualizare').style.display = "block";
                 }else{
                     document.getElementById('previzualizare').style.display = "none";
                 }
-
-
-
                 document.getElementById('previzualizare').innerHTML = pretxt;
                 document.getElementById('previzualizare').style.fontSize = document.getElementById('numcanvas').value + 'px';
                 document.getElementById('previzualizare').style.fontFamily = document.getElementById('fontfamily').value;
-
-
             }
-
-
         </script>
-
-
         <div id="inspector" style="transform: translate(-50%, -5px); left: 875px; top: 21px;">
             <form name="pallets" class="pallets">
                 <span onmousedown="startdrag();paletes=1;" onmouseup="stopdrag();paletes=0;" id="dragablepaletes">Pallets</span><br>
@@ -745,7 +622,6 @@ function openCity(evt, cityName) {
                                                                  var y = document.getElementById('textInput').style.top;
                                                                  x = parseInt(x);
                                                                  y = parseInt(y);
-
                                                                  setText(loctxt,locsize,locfont,x-115,y-10);
                                                                  ">
             <br>
@@ -757,5 +633,4 @@ function openCity(evt, cityName) {
 
         <p class="copy"> Hello !!! </p>
 
-</body>
-    </html>
+</body></html>
